--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,10 +1,59 @@
 .text {
-  @apply font-bold;
-  font-size: 1.5rem;
+  @apply font-medium;
+  font-size: 1rem;
+  align-self: start;
+  @apply m-3;
 }
 
-.test-button {
-  /* GitHub CoPilot suggest me เก่งชิบหาย */
-  @apply flex items-center justify-center;
-  @apply bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+.homepage {
+  width: 375px;
+  height: 812px;
+  @apply border border-gray-300 rounded-lg;
+  @apply flex flex-col items-center;
+}
+
+.home-task-des {
+  @apply rounded-lg m-2 max-w-xs !important;
+}
+
+.home-task-srt {
+  @apply rounded-lg m-2 max-w-xs !important;
+}
+
+.new-task-button {
+  @apply bottom-px m-5 w-80 box-border h-11 w-80 inline-block px-6 py-2.5 bg-black text-white rounded-lg !important;
+} 
+
+.new-task-button:hover {
+  @apply bg-neutral-800 !important;
+}
+
+.side-page {
+  width: 90%;
+  height: 90%;
+  /* @apply border border-gray-300 rounded-lg; */
+}
+
+.defu-card {
+  @apply w-60 mt-3 ml-20 !important;
+  /* margin-left: 20% !important; */
+}
+
+/* card format */
+.ant-card-meta-title {
+  @apply mb-0 text-base !important;
+}
+
+.ant-card-body {
+  @apply px-4 py-2 text-xs !important;
+}
+/* --- end --- */
+
+
+.side-tag {
+  @apply mt-2 !important;
+}
+
+.task-fsn {
+  @apply absolute top-5 right-0 w-10 !important;
 }
