--- a/src/pages/AddTask/AddTask.css
+++ b/src/pages/AddTask/AddTask.css
@@ -9,32 +9,17 @@
     width: 375px;
     height: 812px;
     @apply border border-gray-300 rounded-lg;
-    @apply flex flex-col items-center justify-center; 
+    @apply flex flex-col items-center;
+}
 
+.add-task-info {
+    width: 90%;
+    height: 90%;
+    @apply flex flex-col items-center justify-center;
 }
 
 .add-task-name {
     @apply rounded-lg m-2 max-w-xs;
-}
-
-.add-task-des {
-    @apply rounded-lg m-2 max-w-xs !important;
-}
-
-.cancel-button {
-    @apply bottom-px mt-10 w-80 box-border h-11 w-80 inline-block px-6 py-2.5 bg-red-800 text-white rounded-lg !important;
-} 
-
-.cancel-button:hover {
-    @apply bg-red-700 !important;
-}
-
-.add-button {
-    @apply bottom-px mt-5 w-80 box-border h-11 w-80 inline-block px-6 py-2.5 bg-black text-white rounded-lg !important;
-} 
-
-.add-button:hover {
-    @apply bg-neutral-800 !important;
 }
 
 .ant-input {
@@ -42,6 +27,29 @@
 }
 
 .add-task-tag {
-    @apply h-1 m-2 !important;
+    @apply h-2 m-4 !important;
 }
 
+.dl-task-date {
+    @apply m-2 !important;
+}
+
+.dl-task-time {
+    @apply m-2 !important;
+}
+
+.cancel-button {
+    @apply bottom-px m-0 w-80 box-border h-11 w-80 inline-block px-6 py-2.5 bg-red-800 text-white rounded-lg !important;
+} 
+
+.cancel-button:hover {
+    @apply bg-red-700 !important;
+}
+
+.add-button {
+    @apply bottom-px m-5 w-80 box-border h-11 w-80 inline-block px-6 py-2.5 bg-black text-white rounded-lg !important;
+} 
+
+.add-button:hover {
+    @apply bg-neutral-800 !important;
+}
