--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -28,7 +28,7 @@
 }
 
 .new-task-button {
-  @apply bottom-px m-5 w-80 box-border h-11 w-80 inline-block px-6 py-2.5 bg-black text-white rounded-lg !important;
+  @apply bottom-px m-5 box-border h-11 w-80 inline-block px-6 py-2.5 bg-black text-white rounded-lg !important;
 } 
 
 .new-task-button:hover {
