--- a/src/pages/AddTask/AddTask.css
+++ b/src/pages/AddTask/AddTask.css
@@ -1,3 +1,6 @@
-.add-task-des {
+.medium-editor-element {
+  @apply p-2;
+  @apply border border-black rounded-lg;
+  border-color: #e5e7eb;
   min-height: 12rem !important;
 }
