--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -68,3 +68,9 @@
   @apply absolute top-10 right-1 italic;
   color: grey;
 }
+
+.show-editor {
+  @apply p-2;
+  @apply border border-black rounded-lg;
+  border-color: #e5e7eb;
+}
